package com.kiruhm.cabify_mobile_challenge.domain.models.utils

object TestTags {
    const val CAST_ICON_TAG = "cast_icon"
    const val CAST_ICON_BADGE_TAG = "cast_icon_badge"
    const val BUY_PRODUCT_ROW_TAG = "buy_product_row"
    const val BUY_PRODUCT_PURCHASE_BUTTON_TAG = "buy_product_purchase_button"
    const val BUY_PRODUCTS_DIALOG_TAG = "buy_products_dialog"
    const val DELETE_PRODUCT_DIALOG_TAG = "delete_product_dialog"
    const val CART_PRODUCT_TAG = "cart_product"
    const val CART_PRODUCT_CONTINUE_BUTTON_TAG = "cart_product_continue_button"
    const val CART_PRODUCT_AMOUNT_TAG = "cart_product_amount"
    const val CART_PRODUCT_SELECT_BOX_TAG = "cart_product_select_box"
    const val REMOVE_PRODUCT_TAG = "remove_product"
    const val ADD_TO_CART_TAG = "add_to_cart"
    const val ADD_PRODUCT_TAG = "add_product"
    const val GRID_SELECTOR_LIST_TAG = "grid_selector_list"
    const val GRID_SELECTOR_GRID_TAG = "grid_selector_grid"
    const val PRODUCT_ITEM_TAG = "product_item"
    const val SEARCH_BAR_TAG = "search_bar"
    const val SEARCH_BAR_CLEAR_TAG = "search_bar_clear"
    const val PRODUCT_ITEM_FILTER_TAG = "product_item_filter"
    const val PRODUCT_ITEM_FILTER_CLEAR_TAG = "product_item_filter_clear"
}